Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
Qt Creator 4.3.1
Description
Compiling Qt Creator enterprise 4.3.1 from source with Qt5.9.1 enterprise i got:
qtcreator/qml/qmlpuppet/qml2puppet/instances/objectnodeinstance.cpp:282:18: error: invalid use of incomplete type 'class QDebug' qWarning() << "Property list interface not fully implemented for Class " << property.property().typeName() << " in property " << property.name() << "!";