Qmlpuppet: add missing includes

Task-number:  QTCREATORBUG-18498
Change-Id: Ie40a066508bb52f53b8ad528f9d4cf6969fc0632
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>