share/qtcreator/qml/qmlpuppet/qml2puppet/instances/layoutnodeinstance.cpp
@@ -29,6 +29,8 @@
 ****************************************************************************/
 #include "layoutnodeinstance.h"
 
+#include <QCoreApplication>
+
 namespace QmlDesigner {
 namespace Internal {
 
